--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+# .gitignore
+.env
+.env.local
+.env.*.local
+node_modules/
+dist/
+dist-ssr/
+*.local
+.DS_Store
